fixed file spacing

--- a/final.css
+++ b/final.css
@@ -448,6 +448,8 @@ div.desc {
 }
 
 
-
+#pics {
+	padding-right: 100px;
+}
 
 
